Fix Javadoc errors with Java 9 and align with 8.5.x
Primarily fixing Javadoc errors but align with 8.5.x where the
opportunity arises.